<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:padding="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@color/colorPrimary"
                android:text="@string/Partⅰ"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </LinearLayout>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@color/colorPrimary"
                android:text="@string/Partⅱ"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:padding="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@color/colorPrimary"
                android:text="@string/Partⅲ"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </LinearLayout>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@color/colorPrimary"
                android:text="@string/Partⅳ"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:padding="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@color/colorPrimary"
                android:text="@string/Partⅴ"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </LinearLayout>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@color/colorPrimary"
                android:text="@string/Partⅵ"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
